# airbridge

./: .gitignore  CLAUDE.md  DEVELOPING.md  HARDENING.md  LICENSE  README.md  airbridge.spec  installer.iss  main.py  pyproject.toml  run.bat  tray.py  tray_run.bat
.github/workflows/: ci.yml  release.yml
build_assets/: make_ico.py
tests/: conftest.py  test_qr_position.py  test_smoke.py
web/: index.html
