[project]
name = "airbridge"
version = "1.0.0"
description = "LAN photo and file bridge between a phone and a Windows desktop over Wi-Fi"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "python-multipart>=0.0.9",
    "qrcode>=7.4",
]

[tool.uv]
package = false
