[project]
name = "airbridge"
version = "1.0.0"
description = "LAN photo and file bridge between a phone and a Windows desktop over Wi-Fi"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "python-multipart>=0.0.9",
    "qrcode>=7.4",
]

[project.optional-dependencies]
tls = ["cryptography>=42"]
thumbnails = ["pillow>=10", "pillow-heif>=0.16"]
videothumbs = ["imageio-ffmpeg>=0.5"]
tray = ["pystray>=0.19", "pillow>=10"]

[dependency-groups]
dev = ["pyinstaller>=6.11", "pytest>=8"]

[tool.uv]
package = false
